--- a/app/src/styles/custom.scss
+++ b/app/src/styles/custom.scss
@@ -14,6 +14,7 @@ $theme-colors: (
   "lighter": $lighter,
 );
 
+@import "~bootstrap/scss/bootstrap";
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 // NAV overrides
